video with different id

--- a/chingoal/home/templates/home.html
+++ b/chingoal/home/templates/home.html
@@ -88,7 +88,7 @@
                             </div>
                         </div>
                         <div class="embed-responsive embed-responsive-16by9">
-                        <video id="lesson_video" loop> 
+                        <video id="lesson_video1" > 
                             <!-- IF NEEDED ADD TO -->
                             <source src="static/video/level1.mp4" type = "video/mp4">
                             <source src="static/video/level1.webm" type = "video/webm">
@@ -109,7 +109,7 @@
                             </div>
                         </div>
                         <div class="embed-responsive embed-responsive-16by9">
-                        <video id="lesson_video" loop> 
+                        <video id="lesson_video2" > 
                             <!-- IF NEEDED ADD TO CONTROLS LOOP TO AUTOREPLAY-->
                             <source src="static/video/level2.mp4" type = "video/mp4">
                             <source src="static/video/level2.webm" type = "video/webm">
@@ -130,7 +130,7 @@
                             </div>
                         </div>
                         <div class="embed-responsive embed-responsive-16by9">
-                        <video id="lesson_video" loop> 
+                        <video id="lesson_video3" > 
                             <!-- IF NEEDED ADD TO -->
                             <source src="static/video/level3.mp4" type = "video/mp4">
                             <source src="static/video/level3.webm" type = "video/webm">
@@ -151,7 +151,7 @@
                             </div>
                         </div>
                         <div class="embed-responsive embed-responsive-16by9">
-                        <video id="lesson_video" > 
+                        <video id="lesson_video4" > 
                             <!-- IF NEEDED ADD TO -->
                             <source src="static/video/level4.mp4" type = "video/mp4">
                             <source src="static/video/level4.webm" type = "video/webm">
@@ -172,7 +172,7 @@
                             </div>
                         </div>
                         <div class="embed-responsive embed-responsive-16by9">
-                        <video id="lesson_video" > 
+                        <video id="lesson_video5" > 
                             <!-- IF NEEDED ADD TO -->
                             <source src="static/video/level5.mp4" type = "video/mp4">
                             <source src="static/video/level5.webm" type = "video/webm">
@@ -193,7 +193,7 @@
                             </div>
                         </div>
                         <div class="embed-responsive embed-responsive-16by9">
-                        <video id="lesson_video" > 
+                        <video id="lesson_video6" > 
                             <!-- IF NEEDED ADD TO -->
                             <source src="static/video/level6.mp4" type = "video/mp4">
                             <source src="static/video/level6.webm" type = "video/webm">
