--- a/chingoal/home/templates/home.html
+++ b/chingoal/home/templates/home.html
@@ -88,7 +88,7 @@
                             </div>
                         </div>
                         <div class="embed-responsive embed-responsive-16by9">
-                        <video id="lesson_video1" > 
+                        <video id="lesson_video1" onClick="playPause()"> 
                             <!-- IF NEEDED ADD TO -->
                             <source src="static/video/level1.mp4" type = "video/mp4">
                             <source src="static/video/level1.webm" type = "video/webm">
