--- a/chingoal/home/templates/dashboard.html
+++ b/chingoal/home/templates/dashboard.html
@@ -276,7 +276,7 @@
                             </div>
                             </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
-                    {% if cur_user.current_level >= 5 %}
+                    {% if cur_user.unlock > 0 %}
                     <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
